ICE-2302 Fixed alignment of upper left tab.

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
@@ -672,6 +672,7 @@ input.iceSelInpDateClosePopup {
 .icePnlTbSet { /* was iceTabSet*/
     width: 100%;
     background: transparent;
+    border-collapse: separate;
 }
 
 .icePnlTbSetCnt { /*newly added class*/
